--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
     </main>
     <footer class="attribution">
       <p>
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/Samadeen">Momoh Abdulsamad</a>.
+        Challenge by Zuri Coded by
+        <a href="https://github.com/Samadeen">Momoh Abdulsamad</a>.
       </p>
     </footer>
   </body>
