--- a/grid.html
+++ b/grid.html
@@ -14,11 +14,11 @@
       </button>
     </header>
     <main class="grid__container">
-      <div class="orange">1</div>
-      <div class="yellow">2</div>
-      <div class="green">3</div>
-      <div class="blue_one">4</div>
-      <div class="blue_two">5</div>
+      <div class="orange"></div>
+      <div class="yellow"></div>
+      <div class="green"></div>
+      <div class="blue_one"></div>
+      <div class="blue_two"></div>
     </main>
   </body>
 </html>
