--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
 
-    <title>Frontend Mentor | 3-column preview card component</title>
+    <title>Zuri Task | 3-column preview card component</title>
   </head>
   <body>
     <header>
